testsuite/tests/checks/profile_discrepancies/test.out
profile.adb:5:14: error: structure of parameter profile differs
5 |    procedure Proc1                                     --  FLAG
  |              ^^^^^ 

profile.adb:9:14: error: structure of parameter profile differs
9 |    procedure Proc2                                     --  FLAG
  |              ^^^^^ 

profile.adb:13:13: error: structure of parameter profile differs
13 |    function F1 return My_Int is (1);                   --  FLAG
   |             ^^ 

profile.adb:15:13: error: structure of parameter profile differs
15 |    function F1_G return                                --  FLAG
   |             ^^^^ 

profile.adb:21:14: error: structure of parameter profile differs
21 |    procedure Proc3 (I : Standard.Integer) is null;     --  FLAG
   |              ^^^^^ 

profile.adb:23:14: error: structure of parameter profile differs
23 |    procedure Proc4 (I : in Integer) is null;           --  FLAG
   |              ^^^^^ 

profile.adb:25:13: error: structure of parameter profile differs
25 |    function F2 return Standard.Integer is              --  FLAG
   |             ^^ 

profile.adb:35:13: error: structure of parameter profile differs
35 |       entry E (X : in Integer) when True is            --  FLAG
   |             ^ 

